[package]
name = "zkevm-safe"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
evm-disassembler = "0.5"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
libc = "0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }